Fixed h1 conflicts on BlogAllArticles

--- a/src/pages/BlogAllArticles/BlogAllArticles.module.css
+++ b/src/pages/BlogAllArticles/BlogAllArticles.module.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
 }
 
-h1,
+.headerAllArticlesGrid h1,
 h2,
 h3,
 p {
@@ -37,16 +37,13 @@ button {
   padding: 20px;
 }
 
-.headerAllArticles_Title {
-  font-weight: 600;
-}
-
 .introColorsContainer {
   position: absolute;
   top: -120px;
   left: 0;
   right: 0;
   bottom: -50%;
+}
 
   .introColorsImg {
     position: absolute;
@@ -56,7 +53,7 @@ button {
     width: 100%;
     height: 100%;
   }
-}
+
 
 .subContentOfheaderAllArticles {
   display: none;
@@ -67,9 +64,10 @@ button {
   .headerAllArticles {
     /* grid-template-columns: 2fr 4fr; */
     padding: 100px 60px 40px;
+
     .headerAllArticlesGrid {
       grid-template-columns: 2fr 4fr;
-      width: 1100px; /* size to wrapp content of the page */
+      max-width: 1420px; /* 1530px(nav content width) - 60px(logo width)*/
       margin: 0 auto;
     }
 
@@ -80,6 +78,7 @@ button {
     .headerAllArticles_Title {
       text-transform: uppercase;
       font-size: 68px;
+      font-weight: 500;
     }
 
     .headerAllArticles_Paragraph {
@@ -131,22 +130,16 @@ button {
 
 /* Desktop bodyAllArticles style */
 @media only screen and (min-width: 769px) {
-  .bodyAllArticles {
-    width: 1100px; /* size to wrapp content of the page */
-    margin: 0 auto;
-  }
-
   .bodyAllArticlesWrapper {
     max-width: 1470px;
     margin: 0 auto;
-    padding: 30px 45px 0px;
+    padding: 50px 45px 0px;
   }
 
   .bodyAllArticles_Title {
     display: block;
     line-height: 60px;
-    font-weight: 600;
-    padding-top: 80px;
+    margin-left: 24px;
   }
 }
 /* End of bodyAllArticles style */
