added book a demo to the home and game pages for mobile

--- a/src/pages/Game/Game.module.css
+++ b/src/pages/Game/Game.module.css
@@ -2190,4 +2190,12 @@ h2 {
         z-index: 5;
     }
 
+    .bookingFormPopup {
+        display: unset;
+    }
+
+    .closeButton {
+        top: 40px;
+        right: 20px;
+    }
 }
