added book a demo to the Newspaper page for mobile

--- a/src/pages/Newspaper/Newspaper.module.css
+++ b/src/pages/Newspaper/Newspaper.module.css
@@ -1471,6 +1471,14 @@ h2 {
         margin-right:400px;
     }
     
+    .bookingFormPopup {
+        display: unset;
+    }
+
+    .closeButton {
+        top: 40px;
+        right: 20px;
+    }
 }
 
 
@@ -1520,6 +1528,14 @@ h2 {
     margin-right:200px;
 }
 
+.bookingFormPopup {
+    display: unset;
+}
+
+.closeButton {
+    top: 40px;
+    right: 20px;
+}
 }
 
 @media only screen and (max-width: 600px){
@@ -1544,6 +1560,14 @@ h2 {
         width: auto;
         
     }
+    .bookingFormPopup {
+        display: unset;
+    }
+
+    .closeButton {
+        top: 40px;
+        right: 20px;
+    }
 }
 @media only screen and (max-width: 500px){
     .mobileFourthSectionLeft {
@@ -1551,5 +1575,13 @@ h2 {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
+    }
+    .bookingFormPopup {
+        display: unset;
+    }
+
+    .closeButton {
+        top: 40px;
+        right: 20px;
     }
 }
