added book a demo to the NonProfit page for mobile

--- a/src/pages/NonProfit/NonProfit.module.css
+++ b/src/pages/NonProfit/NonProfit.module.css
@@ -1555,6 +1555,14 @@ h2 {
         display: flex;
 
     }
+    
+    .bookingFormPopup {
+        display: unset;
+    }
 
+    .closeButton {
+        top: 40px;
+        right: 20px;
+    }
 
 }
