added book a demo to the Website page for mobile

--- a/src/pages/Website/Website.module.css
+++ b/src/pages/Website/Website.module.css
@@ -753,5 +753,13 @@
       width: 353px;
       margin-left: 10px;
     }
+    .bookingFormPopup {
+      display: unset;
+  }
+
+  .closeButton {
+      top: 40px;
+      right: 20px;
+  }
   }
   
