--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -33,7 +33,6 @@
 .header .nav-menu {
     display: none;
     list-style-type: none;
-
 }
 
 .header .nav-item {
@@ -75,10 +74,10 @@
 .topMenu {
     display: flex;
     flex-direction: row;
-    gap: 80px;
+    gap: 100px;
     align-items: center;
-    justify-content: center;
-    margin-left: 400px;
+    justify-content: right;
+    margin-left: 700px;
 }
 
 .topMenuItem {
@@ -242,7 +241,8 @@
         z-index: 20;
         text-align: center;
         transition: .3s;
-        align-items: center
+        align-items: center;
+        overflow: auto;
     }
     
     .nav-menu a {
@@ -256,6 +256,7 @@
     .nav-item {
         margin: 1.5rem 0;
     }
+
 
     .header .navbar img {
         width: 150px;
