Fix font-family and font-sizes

--- a/src/pages/BlogAllArticles/ReadNextArticleCards/ReadNextArticleCard.module.css
+++ b/src/pages/BlogAllArticles/ReadNextArticleCards/ReadNextArticleCard.module.css
@@ -1,7 +1,7 @@
 .readNextCard,
 .readNextCard * {
   box-sizing: border-box;
-  font-family: gotham;
+  font-family: gotham-book;
   line-height: 26px;
   font-weight: 400;
 }
