Fix font-family and font-weight of button text

--- a/src/pages/BlogAllArticles/ReadNextArticleCards/ReadNextArticleCard.module.css
+++ b/src/pages/BlogAllArticles/ReadNextArticleCards/ReadNextArticleCard.module.css
@@ -70,11 +70,12 @@
 }
 
 .readNextCardBtnReadMore {
+  font-family: Gotham-medium;
   background-color: #a18129;
   color: white;
   padding: 16px 43px;
   max-width: 210px;
-  font-weight: bold;
+  font-weight: 500;
   cursor: pointer;
 }
 
