--- a/src/pages/Newspaper/Newspaper.module.css
+++ b/src/pages/Newspaper/Newspaper.module.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: gotham-medium;
+  src: url('/public/fonts/Gotham/Gotham-Medium.otf');
+}
+
+@font-face {
+  font-family: gotham-book;
+  src: url('/public/fonts/Gotham/Gotham-Book.otf');
+}
+
 .newspaper,
 .newspaper * {
   box-sizing: border-box;
@@ -42,36 +52,13 @@ h2 {
   display: none;
 }
 
-.gradientContainer {
-  width: 100%;
-  max-width: 1530px;
-  position: absolute;
-}
-
-.gradientContainerLeft {
-  /* background-color: rgba(76, 175, 80, 0.4); */
-  z-index: 3;
-  position: absolute;
-  width: 70%;
-  float: right;
-  margin-left: 33%;
-}
-
 .topFirst {
   background: url(/public/heroBackground.svg) no-repeat;
   background-size: cover;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  height: 950px;
-}
-
-.topFirstBg {
   width: 100vw;
-  max-width: 1530px;
   display: flex;
   justify-content: center;
-  background-size: contain;
+  height: 1026px;
 }
 
 .mobileTopFirstBg {
@@ -79,13 +66,14 @@ h2 {
 }
 
 .mainFirst {
-  width: 1110px;
+  width: 1220px;
   display: flex;
+  justify-content: space-between;
   margin-top: 100px;
 }
 
 .rightMain {
-  width: 50%;
+  width: 542px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -96,14 +84,14 @@ h2 {
   font-family: gotham-medium;
   font-size: 80px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 87px;
   z-index: 5;
 }
 
 .text2 {
   color: var(--White, #fff);
-  font-family: gotham-medium;
+  font-family: gotham-book;
   font-size: 80px;
   font-style: normal;
   font-weight: 400;
@@ -113,13 +101,12 @@ h2 {
 
 .parag {
   width: 100%;
-  padding-top: 30px;
+  padding-top: 60px;
   padding-bottom: 60px;
 }
 
 .innerParag {
   color: #fff;
-  width: 80%;
   font-feature-settings: 'clig' off, 'liga' off;
   font-family: gotham-book;
   font-size: 18px;
@@ -129,85 +116,41 @@ h2 {
 }
 
 .buttonText {
-  width: 90%;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  z-index: 5;
-  margin-bottom: 30px;
+  width: 210px;
+  height: 60px;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #fff;
+  background: #fff;
 }
 
-.buttonText1,
-.buttonText2 {
-  border: 1px solid #fff;
-  width: 220px;
-  height: 46px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #ffffff;
-  color: var(--Modal-grey-1, #000000);
+.buttonText1 {
+  color: #0a0a0a;
   text-align: center;
-  font-family: gotham-book, sans-serif;
+  font-feature-settings: 'clig' off, 'liga' off;
+  font-family: gotham-medium;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: 38px;
-  z-index: 5;
-}
-
-.buttonText2 {
-  width: 320px;
-}
-
-.bottomHero {
-  width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 5;
-}
-
-@font-face {
-  font-family: gotham-light;
-  src: url('/public/fonts/Gotham/Gotham-Light.otf');
 }
 
 .leftMain {
   width: 50%;
   display: flex;
-  align-items: center;
   justify-content: left;
-  z-index: 5;
-}
-
-.leftImgInfo {
-  width: 150%;
-  height: 650px;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  margin-top: 150px;
-  margin-right: 100px;
+  margin-top: 195px;
 }
 
 .leftImg {
-  width: 875px;
-  height: 750px;
-  margin-right: 200px;
+  width: 1190px;
+  height: 862px;
+  margin-left: -153px;
 }
 
-/*
-.leftImg:hover {
-    overflow: hidden;
-    transform:  scale(1.05);
-    transition: all 2s ease-in-out;
-}
-*/
-
-/*SECOND SECTION\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
+/*SECOND SECTION*/
 
 .secondNewsContainer {
   width: 100%;
@@ -740,11 +683,7 @@ h2 {
     margin-top: -150px;
   }
 
-  .waves {
-    display: none;
-  }
-
-  /*FIRST MOBILE SECTION\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\*/
+  /*FIRST MOBILE SECTION*/
 
   .firstNewsContainer {
     display: none;
@@ -754,7 +693,7 @@ h2 {
     background-color: #000000;
     display: flex;
     width: 100%;
-    height: 1100px;
+    height: 1094px;
     position: relative;
     flex-direction: column;
     justify-content: center;
@@ -771,8 +710,8 @@ h2 {
 
   .mobileTopFirstBg {
     display: flex;
-    height: 1500px;
-    width: 100vw;
+    height: 1094px;
+    width: 100%;
     background-repeat: no-repeat;
     justify-content: center;
     background: url(/public/heroBackgroundMobile.svg) no-repeat right top 0;
@@ -780,22 +719,14 @@ h2 {
 
   .mainFirstMobile {
     display: flex;
-    width: 352px;
-    height: 1305px;
     flex-direction: column;
     align-items: center;
     padding-top: 100px;
   }
 
   .rightMainMobile {
-    width: 350px;
-    height: 450px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    margin-top: 20px;
-    margin-left: 60px;
-    margin-right: 30px;
   }
 
   .textMobile {
@@ -803,20 +734,18 @@ h2 {
     font-family: gotham-medium;
     font-size: 40px;
     font-style: normal;
-    font-weight: 400;
-    line-height: 131.5%;
-    /* 72.325px */
+    font-weight: 500;
+    line-height: 120%;
     z-index: 5;
   }
 
   .text2Mobile {
     color: var(--White, #fff);
-    font-family: gotham-medium;
+    font-family: gotham-book;
     font-size: 40px;
     font-style: normal;
     font-weight: 400;
-    line-height: 131.5%;
-    /* 72.325px */
+    line-height: 120%;
     z-index: 5;
   }
 
@@ -836,7 +765,6 @@ h2 {
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
-    /* 157.143% */
   }
 
   .buttonTextMobile {
@@ -846,29 +774,23 @@ h2 {
     justify-content: center;
   }
 
-  .buttonText1Mobile,
-  .buttonText2Mobile {
+  .buttonText1Mobile {
     border: 1px solid #fff;
     width: 210px;
     height: 50px;
-
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #ffffff;
     color: var(--Modal-grey-1, #000000);
     text-align: center;
-    font-family: gotham-book;
+    font-family: gotham-medium;
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: 38px;
     z-index: 5;
     margin-top: 150px;
-  }
-
-  .buttonText2Mobile {
-    width: 320px;
   }
 
   .leftMainMobile {
@@ -883,12 +805,11 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 50px;
+    margin: 20px 0 -20px 0;
   }
 
   .leftImgMobile {
-    width: 500px;
-    height: 360px;
+    width: 485px;
     transition: all 2s ease;
   }
 
