Create a subscription box for the blog pages

--- a/src/pages/BlogAllArticles/BlogAllArticles.module.css
+++ b/src/pages/BlogAllArticles/BlogAllArticles.module.css
@@ -152,3 +152,9 @@ button {
   }
 }
 /* End of bodyAllArticles style */
+
+/* SubscribeNews box wrapper */
+.subscribeNews_wrapper {
+  max-width: 1365px;
+  margin: 0 auto;
+}
