--- a/src/pages/Newspaper/Newspaper.module.css
+++ b/src/pages/Newspaper/Newspaper.module.css
@@ -155,255 +155,81 @@ h2 {
 .secondNewsContainer {
   width: 100%;
   max-width: 1920px;
-  height: 950px;
+  height: 1026px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  background-color: #f0f0f0;
+  align-items: center;
+  background-color: #ffffff;
 }
 
 .mobileSecondNewsContainer {
   display: none;
 }
 
-.SubSecondNewsContainer {
-  height: 950px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.secondNewsBox1 {
+  padding-bottom: 70px;
 }
 
-.secondNewsBox1 {
-  height: 100px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.secondNewsBox1 h1 {
   color: var(--Primary-Black-1, #1e1e1e);
   text-align: center;
-  font-family: gotham-book;
+  font-family: gotham-medium;
   font-size: 53px;
   font-style: normal;
   font-weight: 500;
   line-height: 50px;
 }
 
-.innerSecondNewsBox1 {
-  color: var(--Primary-Black-1, #8764e3);
-  text-align: center;
-  font-family: gotham-medium;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 38px;
-}
-
 .secondNewsBox2 {
-  height: 670px;
   width: 1100px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  column-gap: 100px;
+  row-gap: 20px;
+  margin-left: 73px;
 }
 
-.secondBox2Container {
-  display: flex;
-  justify-content: right;
-}
-
-.second13,
-.second24 {
-  width: 100%;
-  height: 560px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.second13 {
-  margin-right: 25px;
-}
-
-.second24 {
-  margin-left: 25px;
-}
-
-.second13One,
-.second13Two,
-.second24One,
-.second24Two {
+.secondNewsCard {
   width: 490px;
-  height: 311.18px;
-  display: flex;
-  align-items: center;
-}
-/* four divs in the second section */
-.second13One {
-  margin-top: 50px;
-}
-.second24One {
-  margin-top: 40px;
-}
-.second13Two {
-  margin-top: 50px;
-}
-.second24Two {
-  margin-top: 87px;
-}
-/* .second13One, .second13Two {}
-  
-  .second24One, .second24Two {} */
-
-.innerOne {
-  width: 100%;
-  height: 100px;
-  padding-left: 45px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  gap: 16px;
 }
 
-.innerOne h1 {
+.secondNewsCardImg {
+  height: 60px;
+  display: flex;
+  align-items: end;
+}
+
+.secondNewsCard h1 {
   color: var(--Primary-Black-1, #1e1e1e);
   font-family: gotham-medium;
   font-size: 24px;
   font-style: normal;
   font-weight: 500;
   line-height: 38px;
-  margin-bottom: 18px;
 }
 
-.stepOneImg {
-  margin-top: -10px;
-  margin-bottom: 25px;
-  height: 45px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.innerTwo {
-  width: 100%;
-  height: 100px;
-  padding-left: 45px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.innerTwo h1 {
-  color: var(--Primary-Black-1, #1e1e1e);
-  font-family: gotham-medium;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 38px;
-  margin-bottom: 18px;
-}
-
-.stepTwoImg {
-  margin-top: 10px;
-  margin-bottom: 25px;
-  height: 45px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.innerThree {
-  width: 100%;
-  height: 100px;
-  padding-left: 45px;
-  margin-top: 100px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.innerThree h1 {
-  color: var(--Primary-Black-1, #1e1e1e);
-  font-family: gotham-medium;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 38px;
-  margin-bottom: 18px;
-}
-
-.stepThreeImg {
-  margin-top: -30px;
-  margin-bottom: 25px;
-  height: 45px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.innerFour {
-  width: 100%;
-  height: 100px;
-  padding-left: 45px;
-  margin-top: 100px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.innerFour h1 {
-  color: var(--Primary-Black-1, #1e1e1e);
-  font-family: gotham-medium;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 38px;
-  margin-bottom: 18px;
-}
-
-.stepFourImg {
-  margin-top: -60px;
-  margin-bottom: 25px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* section2 paragraph */
-.second13Integration {
-  padding-top: 10px;
-  width: 447px;
+.secondNewsCard p {
   color: var(--Primary-Black-1, #1e1e1e);
   font-family: gotham-book;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
-  display: flex;
-  flex-direction: column;
-  margin-top: -20px;
+  margin: 0;
+  height: 167px;
 }
 
-.second13Two {
-  align-items: flex-start;
-}
-
-.second24 {
-  width: 100%;
-  height: 560px;
-}
-
-.innerTwo {
-  width: 100%;
-  height: 100px;
-}
-
-.second24Two {
-  justify-content: flex-start;
-  align-items: flex-start;
+.secondNewsCard span {
+  font-family: gotham-medium;
+  font-weight: 500;
 }
 
 /*THIRD SECTION*/
