--- a/src/pages/BlogAllArticles/ArticleCard/ArticleCard.module.css
+++ b/src/pages/BlogAllArticles/ArticleCard/ArticleCard.module.css
@@ -60,6 +60,7 @@
   cursor: pointer;
   font-family: gotham-medium;
   font-weight: 500;
+  text-align: center;
 }
 
 /* Desktop ArticleCard style */
