--- a/src/pages/HowItWorks/HowItWorks.module.css
+++ b/src/pages/HowItWorks/HowItWorks.module.css
@@ -127,39 +127,6 @@ h2 {
   line-height: 30.6px;
 }
 
-.buttonText {
-  width: 90%;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  z-index: 5;
-  margin-bottom: 30px;
-}
-
-.buttonText1,
-.buttonText2 {
-  border: 1px solid #fff;
-  width: 220px;
-  height: 46px;
-  flex-shrink: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #ffffff;
-  color: var(--Modal-grey-1, #000000);
-  text-align: center;
-  font-family: gotham-book, sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 38px;
-  z-index: 5;
-}
-
-.buttonText2 {
-  width: 320px;
-}
-
 .bottomHero1 {
   width: 100%;
   height: 100px;
@@ -292,7 +259,9 @@ h2 {
   min-height: 1010px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  gap: 30px;
 }
 
 .thirdHowContainer3mobile {
@@ -306,8 +275,6 @@ h2 {
   justify-content: center;
   position: relative;
   z-index: 2;
-  margin-top: 60px;
-  margin-bottom: -35px;
 }
 
 .thirdContainerBox23 {
@@ -317,8 +284,8 @@ h2 {
   justify-content: center;
   position: relative;
   z-index: 2;
-  margin-top: 0px;
 }
+
 .thirdLeft3 {
   max-width: 711px;
   color: #ffffff;
@@ -328,6 +295,7 @@ h2 {
   font-style: normal;
   font-weight: 500;
   line-height: 120%;
+  margin: 0px;
 }
 
 .thirdRight3 {
@@ -344,40 +312,10 @@ h2 {
 }
 
 .imageSec2Bow3 {
-  margin-top: 100px;
   max-width: 610px;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.buttonTextGold {
-  width: 100%;
-  display: flex;
-  z-index: 5;
-  margin-top: 400px;
-}
-
-.buttonText1Gold {
-  border: 1px solid #a18129;
-  background: #a18129;
-  width: 220px;
-  height: 46px;
-  flex-shrink: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--Modal-grey-1, #fff);
-  text-align: center;
-  font-family: gotham-book, sans-serif;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  z-index: 5;
-}
-.button3 {
-  margin-top: 50px;
 }
 
 /*FOURTH SECTION*/
@@ -977,7 +915,6 @@ h2 {
 
   .rightMainMobile1 {
     width: 350px;
-    height: 450px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -1010,14 +947,12 @@ h2 {
 
   .paragMobile1 {
     width: 100%;
-    height: 90px;
     margin-top: 30px;
     margin-bottom: 30px;
   }
 
   .innerParagMobile1 {
     width: 352px;
-    height: 95px;
     color: var(--White, #000000);
     font-family: gotham-book;
     font-size: 14px;
@@ -1025,35 +960,6 @@ h2 {
     font-weight: 400;
     line-height: 24px;
     /* 157.143% */
-  }
-
-  .mobileButtonTextGold {
-    margin-top: 140px;
-    display: flex;
-    justify-content: center;
-  }
-
-  .mobileButtonText1Gold {
-    border: 1px solid #a18129;
-    background: #a18129;
-    width: 220px;
-    height: 46px;
-    flex-shrink: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--Modal-grey-1, #fff);
-    text-align: center;
-    font-family: gotham-book, sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    z-index: 5;
-  }
-
-  .buttonText2Mobile {
-    width: 320px;
   }
 
   .leftMainMobile1 {
@@ -1176,6 +1082,7 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 30px;
   }
 
   .thirdHowContainer3 {
@@ -1239,35 +1146,7 @@ h2 {
     height: 398px;
     object-fit: cover;
   }
-  .buttonTextMobile {
-    width: 100%;
-    display: flex;
-    z-index: 5;
-    margin-top: 100px;
-    margin-bottom: 160px;
-  }
 
-  .buttonText1Mobile {
-    border: 1px solid #ffffff;
-    background: #ffffff;
-    width: 220px;
-    height: 46px;
-    flex-shrink: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--Modal-grey-1, #000000);
-    text-align: center;
-    font-family: gotham-book, sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    z-index: 5;
-  }
-  .button3 {
-    margin-top: 50px;
-  }
 
   /* Fourth MOBILE SECTION */
 
