--- a/src/pages/BlogAllArticles/ArticleCard/ArticleCard.module.css
+++ b/src/pages/BlogAllArticles/ArticleCard/ArticleCard.module.css
@@ -51,7 +51,8 @@
   gap: 25px;
 }
 
-.btnReadMore {
+/* Delete after solve the issue related to Link X Button component */
+/* .btnReadMore {
   background-color: #a18129;
   color: white;
   padding: 16px 43px;
@@ -61,7 +62,7 @@
   font-family: gotham-medium;
   font-weight: 500;
   text-align: center;
-}
+} */
 
 /* Desktop ArticleCard style */
 @media only screen and (min-width: 769px) {
@@ -88,7 +89,9 @@
     flex-basis: calc(50% - 70px);
     height: initial;
   }
-  .btnReadMore {
+
+  /* Delete after solve the issue related to Link X Button component */
+  /* .btnReadMore {
     margin: unset;
-  }
+  } */
 }
