--- a/src/pages/Mobile/Mobile.module.css
+++ b/src/pages/Mobile/Mobile.module.css
@@ -23,7 +23,6 @@
   src: url('/public/fonts/Inter/Inter-Regular.ttf');
 }
 
-
 .Mobile,
 .Mobile * {
   box-sizing: border-box;
@@ -84,7 +83,7 @@
 
 .firstSection {
   max-height: 1026px;
-  background: url(/public/heroBackground.svg) no-repeat;
+  background: url(/public/images/backgroundImgs/heroBackground.svg) no-repeat;
   background-size: cover;
   display: flex;
   flex-direction: row-reverse;
@@ -252,7 +251,6 @@
   margin: -822px 0px -197px 376px;
 }
 
-
 .bookingFormPopup {
   position: fixed;
   top: 0;
@@ -282,15 +280,15 @@
   right: 10px;
   cursor: pointer;
   font-size: 24px;
-  width: 40px; 
+  width: 40px;
   height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 50%; 
+  border-radius: 50%;
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s ease; 
+  transition: background-color 0.3s ease;
 }
 
 .closeButton:hover {
@@ -441,16 +439,16 @@
   .fourthSectionImage {
     margin-top: 54px;
   }
-  
+
   .groupSmartphones {
     width: 933px;
     margin-bottom: -139px;
   }
-  
+
   .bottomBand {
     min-height: 118px;
   }
-  
+
   .oneSmartphone {
     width: 226px;
     margin: -482px 0px 0px 232px;
