--- a/src/pages/Mobile/Mobile.module.css
+++ b/src/pages/Mobile/Mobile.module.css
@@ -302,8 +302,8 @@
 
   .firstSection {
     min-height: 964px;
-    background: url(/public/images/mobile_sec1_bg_mobile.png) no-repeat fixed
-      right;
+    background: url(/public/images/backgroundImgs/mobile_sec1_bg_mobile.png)
+      no-repeat fixed right;
     background-color: #000000;
     display: flex;
     flex-direction: column;
