--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -760,8 +760,8 @@ h2 {
   .secondWebsiteContainerBox2Mobile {
     width: 350px;
     height: 509px;
-    background: url(/public/images/website_sec2_group_mobile.svg) no-repeat
-      center;
+    background: url(/public/images/backgroundImgs/website_sec2_group_mobile.svg)
+      no-repeat center;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
