Organize images from tapjoyVsSmatched, Toc, and data privacy pages

--- a/src/pages/ToC/ToC.module.css
+++ b/src/pages/ToC/ToC.module.css
@@ -80,7 +80,7 @@ h2 {
   flex-direction: column;
   justify-content: center;
   background-color: black;
-  /* background: url(/public/heroBackground.svg) no-repeat;
+  /* background: url(/public/images/backgroundImgs/heroBackground.svg) no-repeat;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed; */
