--- a/src/pages/DataPrivacy/DataPrivacy.module.css
+++ b/src/pages/DataPrivacy/DataPrivacy.module.css
@@ -84,7 +84,7 @@ html {
   flex-direction: column;
   justify-content: center;
   background-color: black;
-  /* background: url(/public/heroBackground.svg) no-repeat;
+  /* background: url(/public/images/backgroundImgs/heroBackground.svg) no-repeat;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed; */
